--- a/OcrOnnxWpf/OcrOnnxWpf.csproj
+++ b/OcrOnnxWpf/OcrOnnxWpf.csproj
@@ -1,21 +1,25 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="utf-8"?>
 <Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
-    <OutputType>Library</OutputType>
-    <TargetFramework>net8.0</TargetFramework>
+    <OutputType>WinExe</OutputType>
+    <TargetFramework>net8.0-windows</TargetFramework>
     <Nullable>enable</Nullable>
-    <RootNamespace>OcrLib</RootNamespace>
-    <AssemblyName>OcrLib</AssemblyName>
+    <UseWPF>true</UseWPF>
+    <RootNamespace>OcrOnnxWpf</RootNamespace>
+    <AssemblyName>OcrOnnxWpf</AssemblyName>
     <Platforms>x64</Platforms>
     <GenerateAssemblyInfo>false</GenerateAssemblyInfo>
+    <UseWindowsForms>False</UseWindowsForms>
+    <StartupObject></StartupObject>
   </PropertyGroup>
-  
+
+  <ItemGroup>
+    <ProjectReference Include="..\OcrLib\OcrLib.csproj" />
+  </ItemGroup>
   <ItemGroup>
     <PackageReference Include="Emgu.CV" Version="4.8.1.5350" />
     <PackageReference Include="Emgu.CV.runtime.windows" Version="4.8.1.5350" />
-    <PackageReference Include="Microsoft.ML.OnnxRuntime" Version="1.17.3" />
     <PackageReference Include="System.Drawing.Common" Version="8.0.0" />
-    <PackageReference Include="Clipper2" Version="1.3.0" />
   </ItemGroup>
   
   
